--- a/vignettes/MMODS-vignette.Rmd
+++ b/vignettes/MMODS-vignette.Rmd
@@ -20,7 +20,9 @@ knitr::opts_chunk$set(
   comment = "#>"
 )
 
-fig_path <- "/Users/eah394/Documents/GitHub/aggregation_methods/figures/MMODS_analysis/"
+knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file())
+
+fig_path <- "figures/"
 ```
 
 ```{r setup-plot, echo = FALSE}
